# advent-coding-challenges-24

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: dependency_review.yaml  merge-schedule.yml
challenges/: challenge1.ipynb  challenge2.ipynb  challenge3.ipynb  challenge4.ipynb  stops.txt  weihnachtsmarkte-muenchen-2024-v4.csv  weihnachtsmarkte-muenchen-2024-v5.csv
solutions/: challenge1_solution.ipynb  challenge2_solution.ipynb  challenge3_solution.ipynb  challenge4_solution.ipynb  weihnachtsmarkte-muenchen-2024-v2.csv  weihnachtsmarkte-muenchen-2024-v4.csv
