[project]
name = "advent-coding-challenges-24"
version = "0.1.0"
description = "Coding Challenges zum Adventskalender 2024 von muenchen.digital"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" }]
dependencies = ["matplotlib>=3.9.2", "pandas>=2.2.3"]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
