[project]
name = "advent-coding-challenges-24"
version = "0.1.0"
description = "Coding Challenges zum Adventskalender 2024 von muenchen.digital"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" }]
dependencies = [
    "folium==0.19.3",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "mapclassify==2.8.1",
    "matplotlib==3.9.3",
    "pandas==2.2.3",
    "routingpy==1.3.0",
]

[dependency-groups]
dev = ["jupyter==1.1.1"]
